--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>El titulo de la pagina</h1>
-    <p>Desde github agrego este parrafo y lo paso a VSC usando push</p>
+    <p>Desde github agrego este parrafo y lo paso a VSC usando el simbolo de sincronizacion en VSC</p>
 </body>
 </html>
