parrafo agregado desde VSC

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>El titulo de la pagina</h1>
     <p>Desde github agrego este parrafo y lo paso a VSC usando el simbolo de sincronizacion en VSC</p>
+    <p>Esto es un parrafo agregado desde VSC</p>
 </body>
 </html>
