--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    <link href="miEstilo.css">
 <body>
     <h1>El titulo de la pagina</h1>
     <p>Desde github agrego este parrafo y lo paso a VSC usando el simbolo de sincronizacion en VSC</p>
