Commit desde el proyecto forkeado

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <h1>El titulo de la pagina</h1>
     <p>Desde github agrego este parrafo y lo paso a VSC usando el simbolo de sincronizacion en VSC</p>
     <p>Esto es un parrafo agregado desde VSC</p>
+
+    <h1>creo un heading 1 desde el proyecto forkeado y clonado</h1>
 </body>
 </html>
